<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="tasks"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_tasks_short"
        android:shortcutLongLabel="@string/shortcut_tasks_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="me.parham1995.notes"
            android:targetClass="me.parham1995.notes.MainActivity">
            <extra
                android:name="me.parham1995.notes.OPEN"
                android:value="tasks" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="me.parham1995.notes"
            android:targetClass="me.parham1995.notes.MainActivity">
            <extra
                android:name="me.parham1995.notes.OPEN"
                android:value="search" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="today"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_today_short"
        android:shortcutLongLabel="@string/shortcut_today_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="me.parham1995.notes"
            android:targetClass="me.parham1995.notes.MainActivity">
            <extra
                android:name="me.parham1995.notes.OPEN"
                android:value="today" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="capture"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_capture_short"
        android:shortcutLongLabel="@string/shortcut_capture_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="me.parham1995.notes"
            android:targetClass="me.parham1995.notes.feature.capture.CaptureActivity" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
